# super-duper-umbrella

civic-volunteering-monitor/: .env.example  .gitignore  README.md  Readme.md  pyproject.toml
civic-volunteering-monitor/data/input/: Oversikt-kommuner-fylker.xlsx
civic-volunteering-monitor/data/output/: coverage_run_example.csv  findings_run_example.csv
civic-volunteering-monitor/scripts/: run_local.sh
civic-volunteering-monitor/src/monitor/: cli.py  config.py  logging_setup.py
civic-volunteering-monitor/src/monitor/classify/: classify_doc.py  llm_client.py  prompts.py
civic-volunteering-monitor/src/monitor/crawl/: dispatcher.py  fetch.py  heuristics.py  html_extract.py  playwright_fetch.py  sitemap.py
civic-volunteering-monitor/src/monitor/ingest/: excel_loader.py  url_normalize.py
civic-volunteering-monitor/src/monitor/parse/: doc_text.py  pdf_text.py
civic-volunteering-monitor/src/monitor/report/: coverage_report.py  export_excel.py  findings_report.py
civic-volunteering-monitor/src/monitor/store/: blob_store.py  db.py  dedupe.py  models.py
civic-volunteering-monitor/src/monitor/utils/: dates.py  rate_limit.py  retry.py
civic-volunteering-monitor/tests/: test_dedupe.py  test_heuristics.py  test_integration_mock_crawl.py  test_sitemap.py  test_url_normalize.py
civic-volunteering-monitorcivic-volunteering-monitor/src/monitor/parse/: content_clean.py
